--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body  bgcolor="gold">
     <hr size="10">
     <table cellspacing="50" width="20">
-        <td><img src="C:\Users\Dhanshree\Desktop\html\mai.jpg" alt="mai" height="400" width="300"> </img>
+        <td><img src="" alt="mai" height="400" width="300"> <https://www.google.com/imgres?imgurl=https%3A%2F%2Fi.ytimg.com%2Fvi%2F1frlqyOHk9E%2Fhqdefault.jpg&imgrefurl=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D1frlqyOHk9E&docid=5dLe6eCTvlZk_M&tbnid=B3aKZMMPuxD0DM%3A&vet=10ahUKEwjZosm6ppPkAhVVfH0KHd1EBFgQMwhHKAQwBA..i&w=480&h=360&itg=1&bih=754&biw=1536&q=kunal%20nandeshwar&ved=0ahUKEwjZosm6ppPkAhVVfH0KHd1EBFgQMwhHKAQwBA&iact=mrc&uact=8/img>
         </td>
                 <td><h1><b>Name:kunal nandeshwar</b></h1>
             <h3><b>ph.no:9765995262</b></h3>
