--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <html>
- <head>
-     <title>personal details</title>
+
+<head>
+    <title>personal details</title>
 </head>
 
-<body  bgcolor="gold">
+<body bgcolor="gold">
     <hr size="10">
     <table cellspacing="50" width="20">
         <td><img src="C:\Users\Dhanshree\Desktop\html\mai.jpg"></img>
         </td>
-                <td><h1><b>Name:kunal nandeshwar</b></h1>
-            <h3><b>ph.no:9765995262</b></h3>
+        <td>
+            <h1><b>Name:Dhanshree Hood</b></h1>
+            <h3><b>ph.no: 97378945645</b></h3>
             <h3><b>address:Nagpur</b></h3>
-        
-            <a href="personaldetail.html"><h2>Personal details</h2></a>
-            
-            <a href="table.html"><h2>qualification table</h2></a>
+
+            <a href="personaldetail.html">
+                <h2>Personal details</h2>
+            </a>
+
+            <a href="table.html">
+                <h2>qualification table</h2>
+            </a>
         </td>
-
     </table>
-
-
     <hr size="10">
-</body> 
+</body>
+
 </html>
