--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <td><img src="C:\Users\Dhanshree\Desktop\html\mai.jpg"></img>
         </td>
         <td>
-            <h1><b>Name:Dhanshree Hood</b></h1>
+            <h1><b>Name:Dhanshree Ashokrao Hood</b></h1>
             <h3><b>ph.no: 97378945645</b></h3>
             <h3><b>address:Nagpur</b></h3>
 
