--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <td>
             <h1><b>Name:Dhanshree Ashokrao Hood</b></h1>
             <h3><b>ph.no: 97378945645</b></h3>
-            <h3><b>address:Nagpur</b></h3>
+            <h3><b>address:Pune</b></h3>
 
             <a href="personaldetail.html">
                 <h2>Personal details</h2>
