--- a/personaldetail.html
+++ b/personaldetail.html
@@ -7,9 +7,9 @@
 
 <hr size="10">
 <ul
-        <li>first name: kunal</li>
-        <li>last name: nandeshwar</li>
-        <li>mother's name: anita N.</li>
+        <li>first name: Dhanshree</li>
+        <li>last name: Hood</li>
+        <li>mother's name: Vanita</li>
 
     </ul>
     <hr size="10">
